--- a/app.json
+++ b/app.json
@@ -1,14 +1,14 @@
 {
 	"expo": {
-		"name": "octo-friends",
-		"slug": "octo-friends",
+		"name": "OctoFavs",
+		"slug": "octofavs",
 		"version": "1.0.0",
 		"orientation": "portrait",
 		"icon": "./assets/icon.png",
 		"splash": {
 			"image": "./assets/splash.png",
 			"resizeMode": "contain",
-			"backgroundColor": "#ffffff"
+			"backgroundColor": "#0D1117"
 		},
 		"updates": {
 			"fallbackToCacheTimeout": 0
@@ -20,7 +20,7 @@
 		"android": {
 			"adaptiveIcon": {
 				"foregroundImage": "./assets/adaptive-icon.png",
-				"backgroundColor": "#FFFFFF"
+				"backgroundColor": "#0D1117"
 			}
 		},
 		"web": {
